--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,38 +1,59 @@
 <section class="login-wrapper">
-    <div class="align-items-center d-flex form-wrapper h-100">
-        <div class="container">
-            <div class="row align-items-end">
-                <div class="col-md-12 text-center">
-                    <figure class="mb-3">
-                        <a [routerLink]="['']">
-                            <img src="assets/img/logo.png" class="img-fluid">
-                        </a>
-                    </figure>
-                    <p style="color: #292E41;font-weight: bold;">
-                        Welcome to my account
-                    </p>
-                </div>
-            </div>
-            <div class="row justify-content-center mt-4 text-center">
-                <div class="col-md-6">
-                    <div class="dashboard-login">
-                        <form>
-                            <div class="form-group">
-                                <input [(ngModel)]="loginUserData.userId" id="email" type="email" class="form-control" name="userId" placeholder="Email" autofocus>
-                            </div>
-                            <div class="form-group">
-                                <input [(ngModel)]="loginUserData.password" id="password" type="password" class="form-control" name="password" placeholder="Password">
-                            </div>
-                            <div class="form-group mt-5">
-                                <button (click)="loginUser()"  type="button" class="btn btn-primary rounded-pill w-50">Login</button>
-                            </div>
-                            <div class="form-group">
-                                <a [routerLink]="['/forgot-password']" class="text-dark">Forgot Password? Reset it.</a>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
+  <div class="align-items-center d-flex form-wrapper h-100">
+    <div class="container">
+      <div class="row align-items-end">
+        <div class="col-md-12 text-center">
+          <figure class="mb-3">
+            <a [routerLink]="['']">
+              <img src="assets/img/logo.png" class="img-fluid" />
+            </a>
+          </figure>
+          <p style="color: #292e41; font-weight: bold">Welcome to my account</p>
         </div>
+      </div>
+      <div class="row justify-content-center mt-4 text-center">
+        <div class="col-md-6">
+          <div class="dashboard-login">
+            <form>
+              <div class="form-group">
+                <input
+                  autofocus
+                  id="email"
+                  type="email"
+                  name="userId"
+                  placeholder="Email"
+                  class="form-control"
+                  [(ngModel)]="loginUserData.userId"
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  id="password"
+                  type="password"
+                  name="password"
+                  class="form-control"
+                  placeholder="Password"
+                  [(ngModel)]="loginUserData.password"
+                />
+              </div>
+              <div class="form-group mt-5">
+                <button
+                  type="button"
+                  (click)="loginUser()"
+                  class="btn btn-primary rounded-pill w-50"
+                >
+                  Login
+                </button>
+              </div>
+              <div class="form-group">
+                <a [routerLink]="['/forgot-password']" class="text-dark">
+                  Forgot Password? Reset it.
+                </a>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </section>
