dashboard design implemented, dashboard API Implemented

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -3,92 +3,65 @@
   <div class="form-inline mr-auto">
     <ul class="navbar-nav mr-3">
       <li>
-        <a
-          href="#"
-          data-toggle="sidebar"
-          class="nav-link nav-link-lg collapse-btn"
-        >
+        <a href="#" data-toggle="sidebar" class="nav-link nav-link-lg collapse-btn">
           <i class="fas fa-bars"></i>
         </a>
       </li>
+
     </ul>
   </div>
   <ul class="navbar-nav navbar-right">
     <li class="dropdown dropdown-list-toggle">
-      <a
-        href="#"
-        data-toggle="dropdown"
-        class="nav-link notification-toggle nav-link-lg"
-      >
-        <i class="far fa-bell" style="font-size: 24px"></i>
+      <a href="#" data-toggle="dropdown" class="nav-link notification-toggle nav-link-lg">
+        <i class="far fa-bell" style="font-size: 24px;"></i>
         <span class="notification-count bg-red">4</span>
       </a>
-      <div
-        class="dropdown-menu dropdown-list dropdown-menu-right notification-card-wraper"
-      >
-        <div class="dropdown-header font-weight-bold text-dark">
-          Notifications
-        </div>
-
+      <div class="dropdown-menu dropdown-list dropdown-menu-right notification-card-wraper">
+        <div class="dropdown-header font-weight-bold text-dark">Notifications</div>
         <div class="card-body">
-          <div class="timeline-activity-widget">
+          <div class="timeline-activity-widget ">
             <div class="widget-activity-item1">
               <span class="font-12 text-muted">Today 22:20 pm</span>
-              <p class="font-weight-normal">
-                Simon Co INS0021 just assign
-                <span class="text-danger">Load Test Inspection.</span>
-              </p>
+              <p class="font-weight-normal">Simon Co INS0021 just assign <span class="text-danger">Load Test
+                  Inspection.</span></p>
             </div>
             <div class="widget-activity-item1">
               <div class="font-12 text-muted">22Jul, 2020 22:30 pm</div>
-              <p class="font-weight-normal">
-                John Doe INS043 just assign
-                <span style="color: #4383b2"
-                  >Magnetic particle inspection.</span
-                >
-              </p>
+              <p class="font-weight-normal">John Doe INS043 just assign <span style="color:#4383b2;">Magnetic
+                  particle inspection.</span></p>
             </div>
             <div class="widget-activity-item1">
               <div class="font-12 text-muted">18 Jul, 2020 10:30 am</div>
-              <p class="font-weight-normal">
-                John Doe INS043 just assign
-                <span class="text-success">Sling/shackle inspection.</span>
-              </p>
+              <p class="font-weight-normal">John Doe INS043 just assign <span class="text-success">Sling/shackle
+                  inspection.</span></p>
             </div>
+
           </div>
         </div>
-
         <div class="dropdown-footer text-center">
-          <a href="#">View All <i class="fas fa-chevron-right"></i></a>
+          <a href="javascript:;">View All <i class="fas fa-chevron-right"></i></a>
         </div>
       </div>
     </li>
 
+
     <li class="dropdown">
-      <a
-        href="#"
-        data-toggle="dropdown"
-        class="nav-link dropdown-toggle nav-link-lg nav-link-user"
-      >
-        <img alt="image" src="img/icons/user_profile_icon.png" class="mr-2" />
-        <span class="d-sm-none d-lg-inline-block"></span> john doe Admin
-        <i class="fa fa-chevron-down ml-4"></i
-      ></a>
+      <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle nav-link-lg nav-link-user">
+        <img alt="image" src="assets/img/icons/user_profile_icon.png" class="mr-2">
+        <span class="d-sm-none d-lg-inline-block"></span> john doe Admin <i class="fa fa-chevron-down ml-4"></i></a>
       <div class="dropdown-menu dropdown-menu-right">
-        <div class="dropdown-title">
-          Hello Alexa Lopez <i class="fa fa-chevron-gown"></i>
-        </div>
-        <a href="profile.html" class="dropdown-item has-icon">
+        <div class="dropdown-title">Hello Alexa Lopez <i class="fa fa-chevron-gown"></i></div>
+        <a href="javascript:;" class="dropdown-item has-icon">
           <i class="far fa-user"></i> Profile
         </a>
-        <a href="timeline.html" class="dropdown-item has-icon">
+        <a href="javascript:;" class="dropdown-item has-icon">
           <i class="fas fa-bolt"></i> Activities
         </a>
         <a href="" class="dropdown-item has-icon">
           <i class="fas fa-cog"></i> Settings
         </a>
         <div class="dropdown-divider"></div>
-        <a href="auth-login.html" class="dropdown-item has-icon text-danger">
+        <a href="javascript:;" class="dropdown-item has-icon text-danger">
           <i class="fas fa-sign-out-alt"></i> Logout
         </a>
       </div>
