--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,135 +1,121 @@
-<div class="main-sidebar sidebar-style-2">
-  <aside id="sidebar-wrapper">
-    <div class="sidebar-brand text-center mt-3 pb-3">
-      <a href="#">
-        <img alt="image" src="img/logo.png" class="logo-name" />
-        <img
-          alt="image"
-          src="img/mini_logo.png"
-          class="header-logo mini_logo"
-        />
+<aside id="sidebar-wrapper">
+  <div class="sidebar-brand text-center mt-3 pb-3">
+    <a href="javascript:;">
+      <img alt="image" src="assets/img/logo.png" class="logo-name" />
+      <img alt="image" src="assets/img/mini_logo.png" class="header-logo mini_logo" />
+    </a>
+  </div>
+  <ul class="sidebar-menu">
+    <li class="dropdown">
+      <a href="javascript:;" class="nav-link" data-toggle="sidebar">
+        <img alt="image" src="assets/img/icons/dashboard_icon.png">
+        <span>Dashboard</span>
       </a>
-    </div>
-    <ul class="sidebar-menu">
-      <li class="dropdown">
-        <a href="#" class="nav-link" data-toggle="sidebar">
-          <img alt="image" src="img/icons/dashboard_icon.png" />
-          <span>Dashboard</span>
-        </a>
-        <ul class="dropdown-menu bg-transparent">
-          <li><a class="nav-link" href="dashboard.html">Dashboard</a></li>
-        </ul>
-      </li>
-      <li class="dropdown">
-        <a href="#" class="nav-link has-dropdown">
-          <img alt="image" src="img/icons/markunread_mail.png" />
-          <span>Follow Up</span>
-        </a>
-        <ul class="dropdown-menu bg-transparent">
-          <span class="font-14 font-weight-600 ml-5 pl-2">Urgent</span>
-          <li class="pb-0 pt-0"><a class="nav-link" href="#">NCD</a></li>
-          <li class="pb-0 pt-0"><a class="nav-link" href="#">High Risk</a></li>
-          <li class="pb-0 pt-0"><a class="nav-link" href="#">Roadtax</a></li>
-        </ul>
-        <ul class="dropdown-menu bg-transparent">
-          <span class="font-14 font-weight-600 ml-5 pl-2">Assist</span>
-          <li class="pb-0 pt-0"><a class="nav-link" href="#">NCD</a></li>
-          <li class="pb-0 pt-0">
-            <a class="nav-link" href="#">Market Value</a>
-          </li>
-        </ul>
-      </li>
+      <ul class="dropdown-menu bg-transparent">
+        <li><a class="nav-link" href="javascript:;">Dashboard</a></li>
+      </ul>
+    </li>
 
-      <li class="dropdown">
-        <a href="users.html" class="nav-link has-dropdown">
-          <img alt="image" src="img/icons/thumb_up.png" />
-          <span>Endorsement</span>
-        </a>
-        <ul class="dropdown-menu bg-transparent">
-          <span class="font-14 font-weight-600 ml-5 pl-2">Urgent</span>
-          <li class="pb-0 pt-0"><a class="nav-link" href="#">NCD</a></li>
-          <li class="pb-0 pt-0"><a class="nav-link" href="#">High Risk</a></li>
-          <li class="pb-0 pt-0"><a class="nav-link" href="#">Roadtax</a></li>
-        </ul>
-        <ul class="dropdown-menu bg-transparent">
-          <span class="font-14 font-weight-600 ml-5 pl-2">Assist</span>
-          <li class="pb-0 pt-0"><a class="nav-link" href="#">NCD</a></li>
-          <li class="pb-0 pt-0">
-            <a class="nav-link" href="#">Market Value</a>
-          </li>
-        </ul>
-      </li>
+    <li class="dropdown ">
+      <a href="javascript:;" class="nav-link has-dropdown">
+        <img alt="image" src="assets/img/icons/markunread_mail.png">
+        <span>Follow Up</span>
+      </a>
+      <ul class="dropdown-menu bg-transparent">
+        <span class="font-14 font-weight-600 ml-5 pl-2">Urgent</span>
+        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">NCD</a></li>
+        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">High Risk</a></li>
+        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">Roadtax</a></li>
+      </ul>
+      <ul class="dropdown-menu bg-transparent">
+        <span class="font-14 font-weight-600 ml-5 pl-2">Assist</span>
+        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">NCD</a></li>
+        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">Market Value</a></li>
+      </ul>
+    </li>
 
-      <li class="dropdown">
-        <a href="users.html" class="nav-link has-dropdown">
-          <img alt="image" src="img/icons/verified.png" />
-          <span>Claim</span>
-        </a>
-        <ul class="dropdown-menu bg-transparent">
-          <li class="pb-0 pt-0"><a class="nav-link" href="#">Windscreen</a></li>
-        </ul>
-      </li>
+    <li class="dropdown ">
+      <a href="javascript:;" class="nav-link has-dropdown">
+        <img alt="image" src="assets/img/icons/thumb_up.png">
+        <span>Endorsement</span>
+      </a>
+      <ul class="dropdown-menu bg-transparent">
+        <span class="font-14 font-weight-600 ml-5 pl-2">Urgent</span>
+        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">NCD</a></li>
+        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">High Risk</a></li>
+        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">Roadtax</a></li>
+      </ul>
+      <ul class="dropdown-menu bg-transparent">
+        <span class="font-14 font-weight-600 ml-5 pl-2">Assist</span>
+        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">NCD</a></li>
+        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">Market Value</a></li>
+      </ul>
+    </li>
 
-      <li class="dropdown">
-        <a href="users.html" class="nav-link has-dropdown">
-          <img alt="image" src="img/icons/moped.png" />
-          <span>Delivery</span>
-        </a>
-        <ul class="dropdown-menu bg-transparent">
-          <li class="pb-0 pt-0">
-            <a class="nav-link" href="#">POST Office</a>
-          </li>
-        </ul>
-      </li>
+    <li class="dropdown ">
+      <a href="javascript:;" class="nav-link has-dropdown">
+        <img alt="image" src="assets/img/icons/verified.png">
+        <span>Claim</span>
+      </a>
+      <ul class="dropdown-menu bg-transparent">
+        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">Windscreen</a></li>
+      </ul>
+    </li>
 
-      <li class="dropdown">
-        <a href="#" class="nav-link">
-          <img alt="image" src="img/icons/dollar_icon.png" />
-          <span>Refund</span>
-        </a>
-      </li>
+    <li class="dropdown ">
+      <a href="javascript:;" class="nav-link has-dropdown">
+        <img alt="image" src="assets/img/icons/moped.png">
+        <span>Delivery</span>
+      </a>
+      <ul class="dropdown-menu bg-transparent">
+        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">POST Office</a></li>
+      </ul>
+    </li>
 
-      <li class="dropdown">
-        <a href="#" class="nav-link">
-          <img alt="image" src="img/icons/maps_ugc.png" />
-          <span>Notifications</span>
-        </a>
-      </li>
+    <li class="dropdown ">
+      <a href="javascript:;" class="nav-link ">
+        <img alt="image" src="assets/img/icons/dollar_icon.png">
+        <span>Refund</span>
+      </a>
+    </li>
 
-      <li class="dropdown">
-        <a href="#" class="nav-link">
-          <img alt="image" src="img/icons/headset_mic.png" />
-          <span>Telemarketing</span>
-        </a>
-      </li>
+    <li class="dropdown ">
+      <a href="javascript:;" class="nav-link">
+        <img alt="image" src="assets/img/icons/maps_ugc.png">
+        <span>Notifications</span>
+      </a>
+    </li>
 
-      <li class="dropdown">
-        <a href="#" class="nav-link has-dropdown">
-          <img alt="image" src="img/icons/content_icon.png" />
-          <span>Report</span>
-        </a>
-        <ul class="dropdown-menu bg-transparent">
-          <li class="pb-0 pt-0"><a class="nav-link" href="#">Roadtax</a></li>
-        </ul>
-      </li>
-      <li class="dropdown">
-        <a href="#" class="nav-link">
-          <img alt="image" src="img/icons/folder_icon.png" />
-          <span>Customer Database</span>
-        </a>
-      </li>
+    <li class="dropdown ">
+      <a href="javascript:;" class="nav-link">
+        <img alt="image" src="assets/img/icons/headset_mic.png">
+        <span>Telemarketing</span>
+      </a>
+    </li>
 
-      <li class="dropdown">
-        <a href="users.html" class="nav-link">
-          <img alt="image" src="img/icons/admin_user.png" />
-          <span>User Management</span></a
-        >
-        <ul class="dropdown-menu bg-transparent">
-          <li class="pb-0 pt-0">
-            <a class="nav-link" href="users.html">User Management</a>
-          </li>
-        </ul>
-      </li>
-    </ul>
-  </aside>
-</div>
+    <li class="dropdown">
+      <a href="javascript:;" class="nav-link has-dropdown">
+        <img alt="image" src="assets/img/icons/content_icon.png">
+        <span>Report</span>
+      </a>
+      <ul class="dropdown-menu bg-transparent">
+        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">Roadtax</a></li>
+      </ul>
+    </li>
+    <li class="dropdown">
+      <a href="javascript:;" class="nav-link">
+        <img alt="image" src="assets/img/icons/folder_icon.png">
+        <span>Customer Database</span>
+      </a>
+    </li>
+
+    <li class="dropdown">
+      <a href="javascript:;" class="nav-link">
+        <img alt="image" src="assets/img/icons/admin_user.png">
+        <span>User Management</span></a>
+      <ul class="dropdown-menu bg-transparent">
+        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">User Management</a></li>
+      </ul>
+    </li>
+  </ul>
+</aside>
