--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -3,7 +3,7 @@
   <div class="form-inline mr-auto">
     <ul class="navbar-nav mr-3">
       <li>
-        <a href="#" data-toggle="sidebar" class="nav-link nav-link-lg collapse-btn">
+        <a href="javascript:;" data-toggle="sidebar" class="nav-link nav-link-lg collapse-btn">
           <i class="fas fa-bars"></i>
         </a>
       </li>
@@ -12,7 +12,7 @@
   </div>
   <ul class="navbar-nav navbar-right">
     <li class="dropdown dropdown-list-toggle">
-      <a href="#" data-toggle="dropdown" class="nav-link notification-toggle nav-link-lg">
+      <a href="javascript:;" data-toggle="dropdown" class="nav-link notification-toggle nav-link-lg">
         <i class="far fa-bell" style="font-size: 24px;"></i>
         <span class="notification-count bg-red">4</span>
       </a>
@@ -46,7 +46,7 @@
 
 
     <li class="dropdown">
-      <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle nav-link-lg nav-link-user">
+      <a href="javascript:;" data-toggle="dropdown" class="nav-link dropdown-toggle nav-link-lg nav-link-user">
         <img alt="image" src="assets/img/icons/user_profile_icon.png" class="mr-2">
         <span class="d-sm-none d-lg-inline-block"></span> john doe Admin <i class="fa fa-chevron-down ml-4"></i></a>
       <div class="dropdown-menu dropdown-menu-right">
