--- a/src/app/widgets/issue-widget/issue-widget.component.html
+++ b/src/app/widgets/issue-widget/issue-widget.component.html
@@ -1,7 +1,7 @@
 <div class="dashboard_right_sidebar">
   <div class="col-sm-12 pt-3">
     <span class="font-15 font-weight-600 text-muted">Today</span>
-    <h4 class="font-18 theme_color">{{today | date}}</h4>
+    <h4 class="font-18 theme_color">{{today | date: 'dd MMM YYYY'}}</h4>
   </div>
   <div class="col-sm-12 mt-3">
     <span class="font-15 font-weight-600 text-muted">Recents Follow up</span>
