--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -14,19 +14,7 @@
     <!-- Main Content -->
     <div class="main-content">
       <section class="section">
-        <div class="row">
-          <!-- left right content code start -->
-          <div class="col-md-9">
-            <app-dashboard></app-dashboard>
-          </div>
-          <!-- left right content code End -->
-
-          <!-- right side bar code start -->
-          <div class="col-md-3">
-            <app-issue-widget></app-issue-widget>
-          </div>
-          <!-- right side bar code end -->
-        </div>
+        <router-outlet></router-outlet>
       </section>
     </div>
   </div>
