--- a/src/app/widgets/note-widget/note-widget.component.html
+++ b/src/app/widgets/note-widget/note-widget.component.html
@@ -1,16 +1,21 @@
-<div class="card card-sales-widget">
-  <div class="card-wrap">
-    <div class="card-header mt-2">
-      <div class="d-lg-inline-block text-left">
-        <div class="box_right_border_one ml-2">
-          <h4 class="text-muted font-15 ml-2 font-weight-bold">Cover Note</h4>
-          <h4 class="mt-1 font-19 font-weight-bold text-dark ml-2">
-            {{coverNoteStatisticResponseData.principal}}</h4>
+<div class="row dashboard-box">
+  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3 pr-0 mb-md-3 mb-sm-3"
+    *ngFor="let note of coverNoteStatisticResponseData.list">
+    <div class="card card-sales-widget">
+      <div class="card-wrap">
+        <div class="card-header mt-2">
+          <div class="d-lg-inline-block text-left">
+            <div class="box_right_border_one ml-2">
+              <h4 class="text-muted font-15 ml-2 font-weight-bold">Cover Note</h4>
+              <h4 class="mt-1 font-19 font-weight-bold text-dark ml-2">
+                {{note.principal}}</h4>
+            </div>
+          </div>
+        </div>
+        <div class="card-bottom-footer">
+          <h1 class="count_no text-left ml-4">{{note.totalCoverNote}}</h1>
         </div>
       </div>
-    </div>
-    <div class="card-bottom-footer">
-      <h1 class="count_no text-left ml-4">{{coverNoteStatisticResponseData.coverNoteTotal}}</h1>
     </div>
   </div>
 </div>
