--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6936,7 +6936,7 @@ body.sidebar-gone .main-sidebar {
   width: 100%;
   height: 100%;
   z-index: 9999;
-  background: url(./assets/img/loading.gif) 50% 50% no-repeat #f9f9f9;
+  background: url(../img/loading.gif) 50% 50% no-repeat #f9f9f9;
   opacity: 1;
 }
 
