--- a/src/app/widgets/basket-widget/basket-widget.component.html
+++ b/src/app/widgets/basket-widget/basket-widget.component.html
@@ -1,6 +1,15 @@
-<div class="row mt-4 mb-4">
-  <div class="col-sm-3 p-15 rounded box bg-light m-3" *ngFor="let item of basketStatisticsResponseData.list">
-    <h4 class="text-center text-muted font-13">{{item.type}}</h4>
-    <h4 class="count_no_color font-40 text-center mt-2">{{item.total}}</h4>
+<ng-template [ngIf]="basketStatisticsResponseData.list?.length > 0" [ngIfElse]="elseBlock">
+  <div class="row mt-4 mb-4">
+    <div class="col-sm-3 p-15 rounded box bg-light m-3" *ngFor="let item of basketStatisticsResponseData.list">
+      <h4 class="text-center text-muted font-13">{{item.type}}</h4>
+      <h4 class="count_no_color font-40 text-center mt-2">{{item.total}}</h4>
+    </div>
   </div>
-</div>
+</ng-template>
+<ng-template #elseBlock>
+  <div class="row mt-4 mb-4">
+    <div class="col-sm-12 p-15 m-3">
+      <h4 class="text-center text-muted font-28 mt-2">No Activity</h4>
+    </div>
+  </div>
+</ng-template>
