--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -69,12 +69,12 @@
   width: 100%;
   height: 100%;
   z-index: 1;
-  background: url(./assets/img/bg.png) no-repeat center center fixed;
+  background: url(../img/bg.png) no-repeat center center fixed;
   background-size: cover;
 }
 
 .login-wrapper.reset-password {
-  background: url(./assets/img/bg.png) no-repeat center center fixed;
+  background: url(../img/bg.png) no-repeat center center fixed;
   background-size: cover;
 }
 
@@ -345,7 +345,7 @@ div.dataTables_wrapper div.dataTables_info {
 }
 
 .page-bg {
-  /* background: url(./assets/img/box_a14.png) no-repeat center;
+  /* background: url(../img/box_a14.png) no-repeat center;
     background-size: cover;*/
   padding: 15vh 0vh 15vh 0vh !important;
 }
