Dashboard Page Functionality, Material Table Implemented

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,121 +1,121 @@
 <aside id="sidebar-wrapper">
   <div class="sidebar-brand text-center mt-3 pb-3">
-    <a href="javascript:;" routerLink="/dashboard">
+    <a routerLink="/admin/dashboard">
       <img alt="image" src="assets/img/logo.png" class="logo-name" />
       <img alt="image" src="assets/img/mini_logo.png" class="header-logo mini_logo" />
     </a>
   </div>
   <ul class="sidebar-menu">
     <li class="dropdown">
-      <a href="javascript:;" class="nav-link" data-toggle="sidebar" routerLink="/dashboard">
+      <a class="nav-link" data-toggle="sidebar" routerLink="/admin/dashboard">
         <img alt="image" src="assets/img/icons/dashboard_icon.png">
         <span>Dashboard</span>
       </a>
       <ul class="dropdown-menu bg-transparent">
-        <li><a class="nav-link" href="javascript:;">Dashboard</a></li>
+        <li><a class="nav-link">Dashboard</a></li>
       </ul>
     </li>
 
     <li class="dropdown ">
-      <a href="javascript:;" class="nav-link has-dropdown">
+      <a class="nav-link has-dropdown">
         <img alt="image" src="assets/img/icons/markunread_mail.png">
         <span>Follow Up</span>
       </a>
       <ul class="dropdown-menu bg-transparent">
         <span class="font-14 font-weight-600 ml-5 pl-2">Urgent</span>
-        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">NCD</a></li>
-        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">High Risk</a></li>
-        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">Roadtax</a></li>
+        <li class="pb-0 pt-0"><a class="nav-link">NCD</a></li>
+        <li class="pb-0 pt-0"><a class="nav-link">High Risk</a></li>
+        <li class="pb-0 pt-0"><a class="nav-link">Roadtax</a></li>
       </ul>
       <ul class="dropdown-menu bg-transparent">
         <span class="font-14 font-weight-600 ml-5 pl-2">Assist</span>
-        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">NCD</a></li>
-        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">Market Value</a></li>
+        <li class="pb-0 pt-0"><a class="nav-link">NCD</a></li>
+        <li class="pb-0 pt-0"><a class="nav-link">Market Value</a></li>
       </ul>
     </li>
 
     <li class="dropdown ">
-      <a href="javascript:;" class="nav-link has-dropdown">
+      <a class="nav-link has-dropdown">
         <img alt="image" src="assets/img/icons/thumb_up.png">
         <span>Endorsement</span>
       </a>
       <ul class="dropdown-menu bg-transparent">
         <span class="font-14 font-weight-600 ml-5 pl-2">Urgent</span>
-        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">NCD</a></li>
-        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">High Risk</a></li>
-        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">Roadtax</a></li>
+        <li class="pb-0 pt-0"><a class="nav-link">NCD</a></li>
+        <li class="pb-0 pt-0"><a class="nav-link">High Risk</a></li>
+        <li class="pb-0 pt-0"><a class="nav-link">Roadtax</a></li>
       </ul>
       <ul class="dropdown-menu bg-transparent">
         <span class="font-14 font-weight-600 ml-5 pl-2">Assist</span>
-        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">NCD</a></li>
-        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">Market Value</a></li>
+        <li class="pb-0 pt-0"><a class="nav-link">NCD</a></li>
+        <li class="pb-0 pt-0"><a class="nav-link">Market Value</a></li>
       </ul>
     </li>
 
     <li class="dropdown ">
-      <a href="javascript:;" class="nav-link has-dropdown">
+      <a class="nav-link has-dropdown">
         <img alt="image" src="assets/img/icons/verified.png">
         <span>Claim</span>
       </a>
       <ul class="dropdown-menu bg-transparent">
-        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">Windscreen</a></li>
+        <li class="pb-0 pt-0"><a class="nav-link">Windscreen</a></li>
       </ul>
     </li>
 
     <li class="dropdown ">
-      <a href="javascript:;" class="nav-link has-dropdown">
+      <a class="nav-link has-dropdown">
         <img alt="image" src="assets/img/icons/moped.png">
         <span>Delivery</span>
       </a>
       <ul class="dropdown-menu bg-transparent">
-        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">POST Office</a></li>
+        <li class="pb-0 pt-0"><a class="nav-link">POST Office</a></li>
       </ul>
     </li>
 
     <li class="dropdown ">
-      <a href="javascript:;" class="nav-link ">
+      <a class="nav-link ">
         <img alt="image" src="assets/img/icons/dollar_icon.png">
         <span>Refund</span>
       </a>
     </li>
 
     <li class="dropdown ">
-      <a href="javascript:;" class="nav-link">
+      <a class="nav-link">
         <img alt="image" src="assets/img/icons/maps_ugc.png">
         <span>Notifications</span>
       </a>
     </li>
 
     <li class="dropdown ">
-      <a href="javascript:;" class="nav-link">
+      <a class="nav-link">
         <img alt="image" src="assets/img/icons/headset_mic.png">
         <span>Telemarketing</span>
       </a>
     </li>
 
     <li class="dropdown">
-      <a href="javascript:;" class="nav-link has-dropdown">
+      <a class="nav-link has-dropdown">
         <img alt="image" src="assets/img/icons/content_icon.png">
         <span>Report</span>
       </a>
       <ul class="dropdown-menu bg-transparent">
-        <li class="pb-0 pt-0"><a class="nav-link" href="javascript:;">Roadtax</a></li>
+        <li class="pb-0 pt-0"><a class="nav-link">Roadtax</a></li>
       </ul>
     </li>
     <li class="dropdown">
-      <a href="javascript:;" class="nav-link">
+      <a class="nav-link">
         <img alt="image" src="assets/img/icons/folder_icon.png">
         <span>Customer Database</span>
       </a>
     </li>
 
     <li class="dropdown">
-      <a href="javascript:;" class="nav-link" routerLink="/dashboard/user">
+      <a class="nav-link" routerLink="/admin/user">
         <img alt="image" src="assets/img/icons/admin_user.png">
         <span>User Management</span></a>
       <ul class="dropdown-menu bg-transparent">
         <li class="pb-0 pt-0">
-          <a class="nav-link" href="javascript:;">User Management</a>
+          <a class="nav-link">User Management</a>
         </li>
       </ul>
     </li>
