--- a/src/app/admin/user-management/user-management.component.html
+++ b/src/app/admin/user-management/user-management.component.html
@@ -83,15 +83,13 @@
                       </div>
                     </div>
                   </div>
-
-
                 </div>
               </div>
             </div>
           </div>
           <div class="modal-footer bg-whitesmoke br">
-            <button type="button" class="btn btn-secondary border-0 shadow-none font-weight-normal"
-              data-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-secondary border-0 shadow-none font-weight-normal" data-dismiss="modal"
+              (click)="showModal=false">Cancel</button>
             <button type="submit" class="btn btn-primary font-weight-normal">Create</button>
           </div>
 
@@ -115,10 +113,11 @@
 <div class="section-body mt-4 pb-4">
   <div class="row">
     <div class="col-12 col-md-12 col-lg-12">
-      <form class="form-inline mb-4">
+      <form #filterForm="ngForm" class="form-inline mb-4">
         <div class="has-search form-group ml-0 mb-2 mb-sm-0 mr-4">
           <span class="fa fa-search form-control-feedback"></span>
-          <input type="text" class="form-control" placeholder="example ; Cert no : CITKSB-QF/20-MPI0513">
+          <input type="text" class="form-control" placeholder="Search User Name, Email, Role" name="Filter"
+            [(ngModel)]="filter">
         </div>
         <button type="button" class="btn btn-info btn-lg" (click)="showModal=true">
           <img src="assets/img/icons/addnew_icon.svg"> Add new</button>
@@ -127,7 +126,7 @@
     <div class="col-12 col-md-12 col-lg-12">
       <div class="card">
         <div class="card-body p-0">
-          <div class="table-responsive">
+          <!-- <div class="table-responsive">
             <table class="table table-bordered RCTI_table mb-0">
               <thead>
                 <tr>
@@ -140,12 +139,12 @@
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let data of dummyDataList; let i = index">
-                  <td>{{data.name}}</td>
-                  <td>{{data.id}}</td>
+                <tr *ngFor="let data of userListResponseData.userList; let i = index">
+                  <td>{{data.userName}}</td>
+                  <td>{{data.userId}}</td>
                   <td>{{data.email}}</td>
                   <td>{{data.department}}</td>
-                  <td>{{data.role}}</td>
+                  <td>{{data.roleName}}</td>
                   <td colspan="2" class="text-center">
                     <a href="javascript:;" data-toggle="modal" data-target="#user-edit-modal"><i
                         class="fa fa-pen mr-4 text-dark"></i></a>
@@ -155,28 +154,40 @@
                 </tr>
               </tbody>
             </table>
-          </div>
+          </div> -->
+
+          <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+            <!-- Position Column -->
+            <ng-container matColumnDef="position">
+              <th mat-header-cell *matHeaderCellDef> No. </th>
+              <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+            </ng-container>
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef> Name </th>
+              <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            </ng-container>
+
+            <!-- Weight Column -->
+            <ng-container matColumnDef="weight">
+              <th mat-header-cell *matHeaderCellDef> Weight </th>
+              <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+            </ng-container>
+
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="symbol">
+              <th mat-header-cell *matHeaderCellDef> Symbol </th>
+              <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
+
         </div>
       </div>
-    </div>
-    <div class="col-12 col-md-12 col-lg-12">
-      <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-end">
-          <li class="page-item">
-            <a class="page-link" href="javascript:;" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-            </a>
-          </li>
-          <li class="page-item"><a class="page-link" href="javascript:;">1</a></li>
-          <li class="page-item"><a class="page-link" href="javascript:;">2</a></li>
-          <li class="page-item"><a class="page-link" href="javascript:;">3</a></li>
-          <li class="page-item">
-            <a class="page-link" href="javascript:;" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
     </div>
   </div>
 </div>
