--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -16,37 +16,20 @@
           <div class="dashboard-login">
             <form>
               <div class="form-group">
-                <input
-                  autofocus
-                  id="email"
-                  type="email"
-                  name="userId"
-                  placeholder="Email"
-                  class="form-control"
-                  [(ngModel)]="loginUserData.userId"
-                />
+                <input autofocus id="email" type="email" name="userId" placeholder="Email" class="form-control"
+                  [(ngModel)]="loginUserData.userId" />
               </div>
               <div class="form-group">
-                <input
-                  id="password"
-                  type="password"
-                  name="password"
-                  class="form-control"
-                  placeholder="Password"
-                  [(ngModel)]="loginUserData.password"
-                />
+                <input id="password" type="password" name="password" class="form-control" placeholder="Password"
+                  [(ngModel)]="loginUserData.password" />
               </div>
               <div class="form-group mt-5">
-                <button
-                  type="button"
-                  (click)="loginUser()"
-                  class="btn btn-primary rounded-pill w-50"
-                >
+                <button type="button" (click)="loginUser()" class="btn btn-primary rounded-pill w-50">
                   Login
                 </button>
               </div>
               <div class="form-group">
-                <a [routerLink]="['/forgot-password']" class="text-dark">
+                <a [routerLink]="['/auth/forgot-password']" class="text-dark">
                   Forgot Password? Reset it.
                 </a>
               </div>
@@ -57,4 +40,5 @@
     </div>
   </div>
 </section>
-<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-clip-rotate-multiple" [fullScreen] = "true"></ngx-spinner>
+<ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#fff" type="ball-clip-rotate-multiple"
+  [fullScreen]="true"></ngx-spinner>
