--- a/src/app/admin/user-management/user-management.component.html
+++ b/src/app/admin/user-management/user-management.component.html
@@ -1,104 +1,12 @@
 <!--   User Create Modal Code Start -->
-<div class="user-managment-modal">
-  <div class="modal fade" id="user-create-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-    aria-hidden="true" [ngClass]="{'show': showModal}">
-    <div class="modal-dialog modal-lg" role="document">
-      <form class="needs-validation" novalidate="">
-        <div class="modal-content">
-          <div class="modal-header text-center d-block text-white bg-success pt-3 pb-3">
-            <h5 class="modal-title  font-16">Create New User</h5>
-          </div>
-          <div class="modal-body">
-            <div class="row">
-              <div class="col-12 col-md-12 col-lg-12">
-                <div class="card-body">
-                  <div class="form-group row">
-                    <label class="col-sm-3 col-form-label">User Name:</label>
-                    <div class="col-sm-9">
-                      <input type="text" class="form-control" required="">
-                      <div class="invalid-feedback">
-                        Please Enter User Name?
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-group row">
-                    <label class="col-sm-3 col-form-label">User ID:</label>
-                    <div class="col-sm-9">
-                      <input type="email" class="form-control" required="">
-                      <div class="invalid-feedback">
-                        User ID is invalid.
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-group row">
-                    <label class="col-sm-3 col-form-label">Email:</label>
-                    <div class="col-sm-9">
-                      <input type="email" class="form-control" required="">
-                      <div class="invalid-feedback">
-                        Email is invalid.
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="form-group row">
-                    <label class="col-sm-3 col-form-label">Role:</label>
-                    <div class="col-sm-9">
-                      <select class="form-control">
-                        <option hidden="">Select</option>
-                        <option>Admin</option>
-                        <option>Inspector</option>
-                      </select>
-                      <div class="invalid-feedback">
-                        Role is invalid.
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="form-group row">
-                    <label class="col-sm-3 col-form-label">Department:</label>
-                    <div class="col-sm-9">
-                      <input type="email" class="form-control">
-                      <div class="valid-feedback">
-                        done.
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="form-group row">
-                    <label class="col-sm-3 col-form-label">New Password:</label>
-                    <div class="col-sm-9">
-                      <input type="email" class="form-control">
-                      <div class="valid-feedback">
-                        done.
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="form-group row">
-                    <label class="col-sm-3 col-form-label">Repeat Password:</label>
-                    <div class="col-sm-9">
-                      <input type="email" class="form-control">
-                      <div class="valid-feedback">
-                        done.
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="modal-footer bg-whitesmoke br">
-            <button type="button" class="btn btn-secondary border-0 shadow-none font-weight-normal" data-dismiss="modal"
-              (click)="showModal=false">Cancel</button>
-            <button type="submit" class="btn btn-primary font-weight-normal">Create</button>
-          </div>
-
-        </div>
-      </form>
-    </div>
-  </div>
-</div>
-<!--   User Create Modal Code Start -->
+<app-add-user [data]="addUserDialog"></app-add-user>
+<!--   User Create Modal Code End -->
+<!--   User edit Modal Code Start -->
+<app-edit-user [data]="editUserDialog" [userData]="editUserData"></app-edit-user>
+<!--   User edit Modal Code Start -->
+<!--   User Delete Modal Code Start -->
+<app-delete-user [data]="deleteUserDialog"></app-delete-user>
+<!--   User Delete Modal Code Start -->
 
 <div class="section-header">
   <div class="row">
@@ -117,75 +25,53 @@
         <div class="has-search form-group ml-0 mb-2 mb-sm-0 mr-4">
           <span class="fa fa-search form-control-feedback"></span>
           <input type="text" class="form-control" placeholder="Search User Name, Email, Role" name="Filter"
-            [(ngModel)]="filter">
+            (keyup)="doFilter($event.target.value)" [(ngModel)]="filter">
         </div>
-        <button type="button" class="btn btn-info btn-lg" (click)="showModal=true">
+        <button type="button" class="btn btn-info btn-lg" (click)="addUserDialog=!addUserDialog">
           <img src="assets/img/icons/addnew_icon.svg"> Add new</button>
       </form>
     </div>
     <div class="col-12 col-md-12 col-lg-12">
       <div class="card">
         <div class="card-body p-0">
-          <!-- <div class="table-responsive">
-            <table class="table table-bordered RCTI_table mb-0">
-              <thead>
-                <tr>
-                  <th scope="col">User Name</th>
-                  <th scope="col">User ID</th>
-                  <th scope="col">Email</th>
-                  <th scope="col">Department</th>
-                  <th scope="col">Role</th>
-                  <th scope="col" class="text-center">Action</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let data of userListResponseData.userList; let i = index">
-                  <td>{{data.userName}}</td>
-                  <td>{{data.userId}}</td>
-                  <td>{{data.email}}</td>
-                  <td>{{data.department}}</td>
-                  <td>{{data.roleName}}</td>
-                  <td colspan="2" class="text-center">
-                    <a href="javascript:;" data-toggle="modal" data-target="#user-edit-modal"><i
-                        class="fa fa-pen mr-4 text-dark"></i></a>
-                    <a href="javascript:;" data-toggle="modal" data-target="#user-delete-modal"><i
-                        class="fa fa-trash text-dark"></i></a>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div> -->
-
           <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
-            <!-- Position Column -->
-            <ng-container matColumnDef="position">
-              <th mat-header-cell *matHeaderCellDef> No. </th>
-              <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+            <ng-container matColumnDef="userName">
+              <th mat-header-cell *matHeaderCellDef> User Name </th>
+              <td mat-cell *matCellDef="let element"> {{element.userName}} </td>
             </ng-container>
 
-            <!-- Name Column -->
-            <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef> Name </th>
-              <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            <ng-container matColumnDef="userId">
+              <th mat-header-cell *matHeaderCellDef> User ID </th>
+              <td mat-cell *matCellDef="let element"> {{element.userId}} </td>
             </ng-container>
 
-            <!-- Weight Column -->
-            <ng-container matColumnDef="weight">
-              <th mat-header-cell *matHeaderCellDef> Weight </th>
-              <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+            <ng-container matColumnDef="email">
+              <th mat-header-cell *matHeaderCellDef> Email </th>
+              <td mat-cell *matCellDef="let element"> {{element.email}} </td>
             </ng-container>
 
-            <!-- Symbol Column -->
-            <ng-container matColumnDef="symbol">
-              <th mat-header-cell *matHeaderCellDef> Symbol </th>
-              <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+            <ng-container matColumnDef="department">
+              <th mat-header-cell *matHeaderCellDef> Department </th>
+              <td mat-cell *matCellDef="let element"> {{element.department}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="roleName">
+              <th mat-header-cell *matHeaderCellDef> Role </th>
+              <td mat-cell *matCellDef="let element"> {{element.roleName}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="action">
+              <th mat-header-cell *matHeaderCellDef> Action </th>
+              <td mat-cell *matCellDef="let element">
+                <i (click)="editDialog(element.action)" class="fa fa-pen mr-4 text-dark"></i>
+                <i (click)="deleteDialog(element.action.userId)" class="fa fa-trash text-dark"></i>
+              </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           </table>
-
+          <mat-paginator [pageSize]="10" (page)="pageChanged($event)"></mat-paginator>
         </div>
       </div>
     </div>
